tests/baselines/reference/deleteOperatorInStrictMode.errors.txt
tests/cases/compiler/deleteOperatorInStrictMode.ts(3,8): error TS1102: 'delete' cannot be called on an identifier in strict mode.
tests/cases/compiler/deleteOperatorInStrictMode.ts(3,8): error TS2703: The operand of a 'delete' operator must be a property reference.


==== tests/cases/compiler/deleteOperatorInStrictMode.ts (2 errors) ====
    "use strict"
    var a;
    delete a;
           ~
!!! error TS1102: 'delete' cannot be called on an identifier in strict mode.
           ~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.